--- a/app/src/main/res/layout/content_doubt_list_main.xml
+++ b/app/src/main/res/layout/content_doubt_list_main.xml
@@ -9,10 +9,11 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ui.ui.DoubtListMainActivity"
+    tools:context="ui.DoubtListMainActivity"
     tools:showIn="@layout/activity_doubt_list_main">
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!" />
