--- a/app/src/main/res/layout/content_doubt_list_main.xml
+++ b/app/src/main/res/layout/content_doubt_list_main.xml
@@ -12,9 +12,8 @@
     tools:context="ui.DoubtListMainActivity"
     tools:showIn="@layout/activity_doubt_list_main">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/listView"/>
 </RelativeLayout>
