--- a/app/src/main/res/layout/content_doubt_list_main.xml
+++ b/app/src/main/res/layout/content_doubt_list_main.xml
@@ -11,11 +11,11 @@
     <!--<ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/listView"/>-->
+        android:id="@+id/listView"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"/>-->
 
 </RelativeLayout>
