--- a/app/src/main/res/layout/activity_doubt_list_main.xml
+++ b/app/src/main/res/layout/activity_doubt_list_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
     android:orientation="vertical"
-    tools:context=".ui.DoubtListMainActivity">
+    tools:context=".ui.TopicListMainActivity">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
